--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ###############################################################################
 Entry project 2		Find the largest file in folder
-			Class:	Python in The Enterprise
+			Classes: Python in The Enterprise
 Author:			Grzegorz Kozicki
 ###############################################################################
 
